--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,11 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-.idea/
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+.idea
+
 
 ### Eclipse ###
 .apt_generated
