--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,13 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-.idea
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
 
 
 ### Eclipse ###
